fix: wrap

--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -9,4 +9,5 @@
     justify-content: center;
     gap: 4px;
     list-style: none;
+    flex-wrap: wrap;
 }
